--- a/src/scss/volt/_variables.scss
+++ b/src/scss/volt/_variables.scss
@@ -519,8 +519,8 @@ $embed-responsive-aspect-ratios: (
 // Font, line-height, and color for body text, headings, and more.
 
 // font awesome
-$fontawesome-webfonts-path:   '../vendor/font-awesome/webfonts';
-$font-awesome-5:              'Font Awesome 5 Free';
+$fontawesome-webfonts-path:   '../../../node_modules/@fortawesome/fontawesome-free/webfonts';
+$font-awesome-5:              'Font Awesome 6 Free';
 
 // stylelint-disable value-keyword-case
 $font-family-sans-serif:      'Nunito Sans', sans-serif;
@@ -1182,7 +1182,6 @@ $navbar-light-brand-color:                $navbar-light-active-color;
 $navbar-light-brand-hover-color:          $navbar-light-active-color;
 $navbar-dark-brand-color:                 $navbar-dark-active-color;
 $navbar-dark-brand-hover-color:           $navbar-dark-active-color;
-
 
 // Dropdowns
 //
